--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,23 @@
 
 @layer components {
   .btn {
-    @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
+    @apply bg-blue-500 text-white font-bold py-2 px-4 rounded hover:brightness-75;
+  }
+  input {
+    @apply p-2;
   }
   .input {
-    @apply border p-2;
+    @apply bg-[#16181d] rounded-md text-gray-200;
   }
-  .heart-container .heart {
-    @apply active:scale-125;
+  .heart-container:active .heart {
+    @apply scale-125;
+  }
+
+  input[type="date"] {
+    @apply rounded bg-[#16181d] text-gray-400;
+  }
+
+  .btn-secondary {
+    @apply bg-gray-700;
   }
 }
